# keyboard_insets

./: .gitignore  README.md
keyboard_insets/: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pubspec.yaml
keyboard_insets/example/: .gitignore  README.md  pubspec.yaml
keyboard_insets/example/android/app/: build.gradle
keyboard_insets/example/lib/: main.dart
keyboard_insets/example/linux/: CMakeLists.txt
keyboard_insets/example/web/: index.html  manifest.json
keyboard_insets/example/windows/: CMakeLists.txt
keyboard_insets/lib/: keyboard_insets.dart
keyboard_insets/lib/persistent_safe_area/: persistent_safe_area.dart  persistent_safe_area_bottom.dart
keyboard_insets_mobile/: .gitignore  CHANGELOG.md  README.md  analysis_options.yaml  ffigen.yaml  pubspec.yaml
keyboard_insets_mobile/android/: build.gradle  settings.gradle
keyboard_insets_mobile/android/src/main/jni/: CMakeLists.txt  keyboard_insets_jni.c
keyboard_insets_mobile/ios/: keyboard_insets_mobile.podspec
keyboard_insets_mobile/ios/Classes/: KeyboardInsetsMobilePlugin.swift  keyboard_insets.c  keyboard_insets.h
keyboard_insets_mobile/lib/: keyboard_insets_mobile.dart
keyboard_insets_mobile/src/: CMakeLists.txt  keyboard_insets.c  keyboard_insets.h
keyboard_insets_platform_interface/: CHANGELOG.md  README.md  pubspec.yaml
keyboard_insets_platform_interface/lib/: keyboard_insets_platform_interface.dart
keyboard_insets_web/: .gitignore  .metadata  CHANGELOG.md  README.md  analysis_options.yaml  pubspec.yaml
keyboard_insets_web/lib/: keyboard_insets_web.dart  safe_area_web.dart
(+18 files in other folders)
